--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -23,6 +23,10 @@ th div {
   background-color: #0c4bb5 !important;
 }
 
+.css-o5srbh-MuiPaper-root-MuiAppBar-root {
+  background-color: #0c4bb5 !important;
+}
+
 .css-qize55-MuiButtonBase-root-MuiFab-root {
   background-color: #e4f1fc !important;
   box-shadow: none !important;
