icon color changed

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -27,6 +27,10 @@ th div {
   background-color: #0c4bb5 !important;
 }
 
+.css-7s014k-MuiSvgIcon-root {
+  color: #2a62c2 !important;
+}
+
 .css-qize55-MuiButtonBase-root-MuiFab-root {
   background-color: #e4f1fc !important;
   box-shadow: none !important;
