--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -19,13 +19,10 @@ th div {
   font-family: "Poppins", sans-serif !important;
 }
 
-.css-n7rtur-MuiPaper-root-MuiAppBar-root {
-  background-color: #0c4bb5 !important;
+.MuiPaper-root-MuiAppBar-root {
+  background-color: #1c466b !important;
 }
 
-.css-o5srbh-MuiPaper-root-MuiAppBar-root {
-  background-color: #0c4bb5 !important;
-}
 
 .css-7s014k-MuiSvgIcon-root {
   color: #2a62c2 !important;
