--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,7 +20,7 @@ th div {
 }
 
 .MuiPaper-root-MuiAppBar-root {
-  background-color: #1c466b !important;
+  background-color: #fff!important;
 }
 
 
